# src/model/dto/dto-notify.dto.ts
@@ -1,4 +1,18 @@
-import { NotifyLevel, NotifyType } from "../type/notify.type";
+export type NotifyType = "market" | "food";
+export type NotifyLevel = "global" | "branch" | "user";
+
+export interface NotifyDto {
+  id: string;
+  title: string;
+  message: string;
+  type: NotifyType;
+  level: NotifyLevel;
+  createdBy: string;
+  branchId?: string;
+  userId?: string;
+  readBy: string[];
+  createdAt: Date;
+}
 
 export interface CreateNotifyDto {
   title: string;
